--- a/WebApplication1/Views/Obstacle/Overview.cshtml
+++ b/WebApplication1/Views/Obstacle/Overview.cshtml
@@ -43,7 +43,7 @@
             <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         
         <script>
-        // Forventer format: {"type":"Point","coordinates":[lng, lat]}, dersom den ikke kan hentes vil de vise error melding.
+        // Dersom lokasjoninfo ikke kan hentes vil de vise error melding.
 
             try
             {
